# cinderlib

./: .gitignore  .gitreview  .stestr.conf  .travis.yml  .zuul.yaml  AUTHORS.rst  CONTRIBUTING.rst  DESCRIPTION.rst  Dockerfile  Dockerfile-latest  Dockerfile-master  Dockerfile-release  HACKING.rst  HISTORY.rst  LICENSE  Makefile  README  README.rst  TODO.rst  lower-constraints.txt  readme_postfix.rst  readme_prefix.rst  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cinderlib/: __init__.py  cinderlib.py  exception.py  nos_brick.py  objects.py  serialization.py  utils.py  workarounds.py
cinderlib/cmd/: cinder_cfg_to_python.py
cinderlib/persistence/: __init__.py  base.py  dbms.py  memory.py
devstack/: README.md  override-defaults  plugin.sh  settings
doc/: .gitignore  requirements.txt
doc/source/: Makefile  conf.py  index.rst  installation.rst  limitations.rst  make.bat  usage.rst
docs/: cinderlib.persistence.rst  conf.py  index.rst  installation.rst  internals.rst  introduction.rst  usage.rst  validated_backends.rst  validating_backends.rst
docs/topics/: backends.rst  connections.rst  initialization.rst  metadata.rst  serialization.rst  snapshots.rst  tracking.rst  volumes.rst
examples/docker/: README.rst  Vagrantfile  (+1 more)
hooks/: build  push  rdo-releases
playbooks/: cinder-gate-run.yaml  setup-ceph.yaml  setup-lvm.yaml
rpm/: cinderlib-0.3.10.dev5-1.el7.centos.src.rpm  cinderlib.spec
tests/: test_cinderlib.py
tools/: cinder-cfg-to-python.py  cinder-to-yaml.py  coding-checks.sh  lvm-prepare.sh  lvm.yaml  virtualenv-sudo.sh
travis-scripts/: build  lvm-config.yml  push  rdo-releases  set-tags  setup-lvm.sh
(+32 files in other folders)
