[bdist_wheel]
universal = 1

[flake8]
exclude = .git,.venv,.tox,dist,doc,*egg,build

[metadata]
name = cinderlib
summary = Direct usage of Cinder Block Storage drivers without the services
description-file =
    DESCRIPTION.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/cinderlib/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cinderlib

[entry_points]
cinderlib.persistence.storage =
    memory = cinderlib.persistence.memory:MemoryPersistence
    db = cinderlib.persistence.dbms:DBPersistence
    memory_db = cinderlib.persistence.dbms:MemoryDBPersistence
console_scripts =
    cinder-cfg-to-cinderlib-code = cinderlib.cmd.cinder_cfg_to_python:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cinderlib/locale
domain = cinderlib

[update_catalog]
domain = cinderlib
output_dir = cinderlib/locale
input_file = cinderlib/locale/cinderlib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cinderlib/locale/cinderlib.pot
